my second commit

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 <h2>Чем мы занимаемся</h2>
 <ul>
     <li>
-        <img src="./images/box1.jpg" width="370" alt="Чем мы занимаемся">
+        <img src="./images/box1.avif" width="370" alt="Чем мы занимаемся">
     </li>
     <li>
-        <img src="./images/box2.jpg" width="370" alt="Чем мы занимаемся">
+        <img src="./images/box2.avif" width="370" alt="Чем мы занимаемся">
     </li>
     <li>
-        <img src="./images/box3.jpg" width="370" alt="Чем мы занимаемся">
+        <img src="./images/box3.avif" width="370" alt="Чем мы занимаемся">
     </li>
 </ul>
 </section>
@@ -59,22 +59,22 @@
     <h2>Наша команда</h2>
     <ul>
     <li>
-        <img src="./images/img1.jpg" width="270" alt="Игорь Демьяненко">
+        <img src="./images/img1.avif" width="270" alt="Игорь Демьяненко">
     <h3>Игорь Демьяненко</h3>
     <p>Product Designer</p>
     </li>
     <li>
-        <img src="./images/img2.jpg" width="270" alt="Ольга Репина">
+        <img src="./images/img2.avif" width="270" alt="Ольга Репина">
     <h3>Ольга Репина</h3>
     <p>Frontend Developer</p>
     </li>
     <li>
-        <img src="./images/img3.jpg" width="270" alt="Николай Тарасов">
+        <img src="./images/img3.avif" width="270" alt="Николай Тарасов">
     <h3>Николай Тарасов</h3>
     <p>Marketing</p>
     </li>
     <li>
-        <img src="./images/img4.jpg" width="270" alt="Михаил Ермаков">
+        <img src="./images/img4.avif" width="270" alt="Михаил Ермаков">
     <h3>Михаил Ермаков</h3>
     <p>UI Designer</p>
     </li>
