--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 
-<!-- saved from url=(0048)file:///C:/Users/DK/Downloads/GO%20IT/index.html -->
 <html lang="ru">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -16,18 +15,18 @@
   </head>
   <body>
     <header>
-      <a href="./index.html" class="logo">
+      <a href="./index.html" class="logo link">
         <span class="accent">Web</span><span class="primary">Studio</span></a
       >
 
       <nav>
-        <ul class="nav">
+        <ul class="nav link">
           <li><a class="nav-link" href="./studio.html">Студия</a></li>
           <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contact">
+      <ul class="contact link">
         <li>
           <a class="" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -79,7 +78,7 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section>
+      <section class="services">
         <h2 class="tagline">Чем мы занимаемся</h2>
         <ul>
           <li>
@@ -95,7 +94,8 @@
       </section>
 
       <!-- Наша команда -->
-      <section>
+
+      <section class="team">
         <h2 class="team-tittle">Наша команда</h2>
         <ul>
           <li>
@@ -123,21 +123,24 @@
     </main>
 
     <footer>
-      <a href="./index.html" class="logo">
-        <span class="accent">Web</span><span class="primary">Studio</span></a
+      <a href="./index.html" class="logo-footer link">
+        <span class="accent-footer">Web</span
+        ><span class="primary-footer">Studio</span></a
       >
       <address>
-        <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-        <p>
-          <a class="contact-footer" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </p>
-        <p>
-          <a class="contact-footer" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </p>
+        <ul class="contact-footer link">
+          <li><p class="address">г. Киев, пр-т Леси Украинки, 26</p></li>
+          <li>
+            <a class="contact-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-footer" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
