--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 
-<!-- saved from url=(0048)file:///C:/Users/DK/Downloads/GO%20IT/index.html -->
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -16,11 +15,11 @@
   </head>
   <body>
     <header>
-      <a href="./index.html" class="logo">
+      <a href="./index.html" class="logo link">
         <span class="accent">Web</span><span class="primary">Studio</span></a
       >
       <nav>
-        <ul class="nav">
+        <ul class="nav link">
           <li><a class="nav-link" href="./studio.html">Студия</a></li>
           <li>
             <a class="nav-link active" href="./portfolio.html">Портфолио</a>
@@ -28,7 +27,7 @@
           <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contact">
+      <ul class="contact link">
         <li>
           <a class="" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -43,7 +42,7 @@
       <button class="filter-btn" type="button">Дизайн</button>
       <button class="filter-btn" type="button">Маркетинг</button>
 
-      <ul>
+      <ul class="project">
         <li>
           <img src="./images/img11.avif" width="370" alt="Веб-сайт" />
           <h3 class="project-item">Технокряк</h3>
@@ -93,21 +92,24 @@
     </main>
 
     <footer>
-      <a href="./index.html" class="logo">
-        <span class="accent">Web</span><span class="primary">Studio</span></a
+      <a href="./index.html" class="logo-footer link">
+        <span class="accent-footer">Web</span
+        ><span class="primary-footer">Studio</span></a
       >
       <address>
-        <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-        <p>
-          <a class="contact-footer" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </p>
-        <p>
-          <a class="contact-footer" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </p>
+        <ul class="contact-footer link">
+          <li><p class="address">г. Киев, пр-т Леси Украинки, 26</p></li>
+          <li>
+            <a class="contact-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-footer" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
